# TurkishSentiNet-CPP

./: .gitignore  CMakeLists.txt  PolarityType.h  README.md  SentiLiteral.cpp  SentiLiteral.h  SentiLiteralNet.cpp  SentiNet.cpp  SentiNet.h  SentiSynSet.cpp  SentiSynSet.h  TestSentiNet.cpp  conanfile.py
Test/: SentiLiteralNetTest.cpp  SentiNetTest.cpp  SentiSynSetTest.cpp
src/: CMakeLists.txt  SentiLiteral.cpp  SentiLiteral.h  SentiLiteralNet.cpp  SentiLiteralNet.h  SentiNet.cpp  SentiNet.h  SentiSynSet.cpp  SentiSynSet.h
